--- a/index.html
+++ b/index.html
@@ -947,6 +947,12 @@ expression directly:</p>
 <p>Commonly, scripts have shebangs so you can invoke them with their filename only:</p>
 </div>
 <div class="listingblock">
+<div class="content">
+<pre class="rouge highlight"><code data-lang="clojure"><span class="n">$</span><span class="w"> </span><span class="n">./script.clj</span><span class="w">
+</span><span class="mi">6</span></code></pre>
+</div>
+</div>
+<div class="listingblock">
 <div class="title">script.clj</div>
 <div class="content">
 <pre class="rouge highlight"><code data-lang="clojure"><span class="o">#</span><span class="n">!/usr/bin/env</span><span class="w"> </span><span class="n">bb</span><span class="w">
