--- a/index.html
+++ b/index.html
@@ -972,7 +972,7 @@ babashka.</p>
 </div>
 <div class="listingblock">
 <div class="content">
-<pre>Babashka v1.3.191
+<pre>Babashka v1.12.194
 
 Usage: bb [svm-opts] [global-opts] [eval opts] [cmdline args]
 or:    bb [svm-opts] [global-opts] file [cmdline args]
@@ -3269,10 +3269,10 @@ as <code>transit</code></p>
 <p><a href="https://github.com/clojure/tools.logging"><code>clojure.tools.logging</code></a></p>
 </li>
 <li>
-<p><a href="https://github.com/ptaoussanis/timbre"><code>timbre</code></a>: logging</p>
+<p><a href="https://github.com/ptaoussanis/timbre"><code>taoensso.timbre</code></a>: logging</p>
 </li>
 <li>
-<p><a href="https://github.com/borkdude/edamame"><code>edamame</code></a>: Clojure parser</p>
+<p><a href="https://github.com/borkdude/edamame"><code>edamame.core</code></a>: Clojure parser</p>
 </li>
 <li>
 <p><a href="https://github.com/clojure/core.rrb-vector"><code>core.rrb-vector</code></a></p>
