--- a/index.html
+++ b/index.html
@@ -3375,6 +3375,12 @@ as <code>transit</code></p>
 <li>
 <p><a href="https://github.com/clojure/core.rrb-vector"><code>core.rrb-vector</code></a></p>
 </li>
+<li>
+<p><a href="https://github.com/nextjournal/markdown"><code>nextjourna.markdown</code></a></p>
+</li>
+<li>
+<p><a href="https://github.com/jhy/jsoup"><code>Jsoup</code></a></p>
+</li>
 </ul>
 </div>
 <div class="admonitionblock tip">
